@@ -21,8 +21,9 @@ dependencies {
         exclude group: 'com.google.android'
     }
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'de.timroes.android:EnhancedListView:0.3.2@aar'
+    compile 'de.timroes.android:EnhancedListView:0.3.4@aar'
     compile 'com.ipaulpro.afilechooser:afilechooser:0.0.1@aar'
+//    compile 'net.rdrei.android.dirchooser:library:2.1.1@aar'
 
     compile 'com.android.support:support-v4:19.+'
     compile 'com.android.support:appcompat-v7:19.+'
