@@ -1,0 +1,4 @@
+package org.openforis.collect.android.gui;
+
+public class StorageNotAvailableException extends RuntimeException {
+}
